--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,10 @@ main {
   max-width:90%;
 }
 
+main img, main iframe, main table {
+  max-width: 100%;
+}
+
 nav {
   display: block;
   text-align:center;
