--- a/assets/css/commento.css
+++ b/assets/css/commento.css
@@ -3,22 +3,23 @@
   color:var(--light-bg);
 }
 
-.commento-login-text {
+.commento-root .commento-login .commento-login-text {
 	color:var(--light-primary);
+	transition:all ease-in .25s;
 }
 
-.commento-login-text:hover {
+.commento-root:hover .commento-login:hover .commento-login-text:hover {
 	color:var(--light-links);
 }
 
 @media (prefers-color-scheme: dark)
 {
 
-	.commento-login-text {
+	.commento-root .commento-login .commento-login-text {
 		color:var(--dark-primary);
 	}
 
-	.commento-login-text:hover {
+	.commento-root:hover .commento-login:hover .commento-login-text:hover {
 		color:var(--dark-links);
 	}
 
